--- a/manifest.json
+++ b/manifest.json
@@ -80,6 +80,6 @@
                 }
             }
         },
-        "domain" : "http://zh5.ranyunlong.com"
+        "domain" : "www.qs13.cn"
     }
 }
